fix small typos

--- a/CylRANSAC.ipynb
+++ b/CylRANSAC.ipynb
@@ -422,7 +422,7 @@
    "source": [
     "%matplotlib inline\n",
     "import numpy as np\n",
-    "import skimage.measure as sm\n",
+    "import sm\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -758,7 +758,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
